--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "clean": "yarn clean_native_builds && yarn clean_react_native && yarn clean_node_modules",
+    "clean_native_builds": "rm -rf ios/build/* && rm -rf android/build/*",
+    "clean_react_native": "rm -rf $TMPDIR/react-* && watchman watch-del-all && lsof -n -i4TCP:8081 | sed '1 d' | awk '{print $2}' | xargs kill -9",
+    "clean_node_modules": "rm -rf node_modules/ && yarn cache clean && yarn"
   },
   "dependencies": {
     "react": "16.0.0",
