--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -97,11 +97,8 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
-    aaptOptions.cruncherEnabled = false
-    aaptOptions.useNewCruncher = false
-
     defaultConfig {
-        applicationId "com.example"
+        applicationId "com.rctgvrexample"
         minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
