--- a/example/ios/RCTGVRExample.xcodeproj/xcshareddata/xcschemes/RCTGVRExample-tvOS.xcscheme
+++ b/example/ios/RCTGVRExample.xcodeproj/xcshareddata/xcschemes/RCTGVRExample-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "example-tvOS.app"
-               BlueprintName = "example-tvOS"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "RCTGVRExample-tvOS.app"
+               BlueprintName = "RCTGVRExample-tvOS"
+               ReferencedContainer = "container:RCTGVRExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "example-tvOSTests.xctest"
-               BlueprintName = "example-tvOSTests"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "RCTGVRExample-tvOSTests.xctest"
+               BlueprintName = "RCTGVRExample-tvOSTests"
+               ReferencedContainer = "container:RCTGVRExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "example-tvOSTests.xctest"
-               BlueprintName = "example-tvOSTests"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "RCTGVRExample-tvOSTests.xctest"
+               BlueprintName = "RCTGVRExample-tvOSTests"
+               ReferencedContainer = "container:RCTGVRExample.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "example-tvOS.app"
-            BlueprintName = "example-tvOS"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "RCTGVRExample-tvOS.app"
+            BlueprintName = "RCTGVRExample-tvOS"
+            ReferencedContainer = "container:RCTGVRExample.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "example-tvOS.app"
-            BlueprintName = "example-tvOS"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "RCTGVRExample-tvOS.app"
+            BlueprintName = "RCTGVRExample-tvOS"
+            ReferencedContainer = "container:RCTGVRExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "example-tvOS.app"
-            BlueprintName = "example-tvOS"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "RCTGVRExample-tvOS.app"
+            BlueprintName = "RCTGVRExample-tvOS"
+            ReferencedContainer = "container:RCTGVRExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
