--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "RCTGVRExample",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,12 +7,22 @@
     "clean": "yarn clean_native_builds && yarn clean_react_native && yarn clean_node_modules",
     "clean_native_builds": "rm -rf ios/build/* && rm -rf android/build/*",
     "clean_react_native": "rm -rf $TMPDIR/react-* && watchman watch-del-all && lsof -n -i4TCP:8081 | sed '1 d' | awk '{print $2}' | xargs kill -9",
-    "clean_node_modules": "rm -rf node_modules/ && yarn cache clean && yarn"
+    "clean_node_modules": "rm -rf node_modules/ && yarn cache clean && yarn",
+    "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "0.51.0",
+    "react": "16.3.1",
+    "react-native": "0.55.3",
     "react-native-gvr": "file:../",
     "react-navigation": "^1.5.11"
+  },
+  "devDependencies": {
+    "babel-jest": "22.4.3",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "22.4.3",
+    "react-test-renderer": "16.3.1"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
